# wx_cmake_project

./: CMakeLists.txt  README.md  call_wx_config.cmake  test.cpp
